# HttpArena

./: .gitignore  README.md
.github/workflows/: benchmark.yml
frameworks/actix/: Cargo.toml
frameworks/aspnet-minimal/: Dockerfile  Handlers.cs  Models.cs  Program.cs
frameworks/elysia/: package.json  server.ts
frameworks/fiber/: main.go
frameworks/fletch/: Dockerfile
frameworks/genhttp/: Dockerfile  genhttp.csproj
frameworks/genhttp-kestrel/: meta.json
frameworks/go-fasthttp/: Dockerfile  go.mod  main.go
frameworks/hummingbird/: Dockerfile  Package.swift
frameworks/hyperf/: README.md
frameworks/ktor/: build.gradle.kts
frameworks/lute/: meta.json  serve.luau
frameworks/nginx/: Dockerfile  meta.json  nginx.conf
frameworks/ngx-php/: Dockerfile
frameworks/ntex/: Cargo.toml  meta.json
frameworks/ntex/src/: main.rs
frameworks/php/: Dockerfile  meta.json  nginx.conf
frameworks/prologue/: Dockerfile
frameworks/ringzero/: Dockerfile  main.c
frameworks/salvo/: Cargo.toml  Dockerfile  meta.json
frameworks/simplew/: Program.cs
frameworks/sinatra/: app.rb
frameworks/sisk/: Program.cs
frameworks/slimeweb/: main.py
frameworks/slimeweb-tls/: main.py
frameworks/spring-boot/: meta.json
frameworks/spring-jvm-jetty/: Dockerfile  entrypoint.sh  meta.json  pom.xml
frameworks/swerver/: Dockerfile  config-h1.json  config-tls.json
frameworks/userver/: Dockerfile  meta.json
frameworks/workerman/: Pgsql.php  README.md  meta.json
frameworks/wtx-http2/: Cargo.toml  Dockerfile  meta.json
scripts/: benchmark.sh  validate.sh
(+123 files in other folders)
